SUBDIRS = src matlab

ACLOCAL_AMFLAGS = -I m4 

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = sg2.pc

EXTRA_DIST = \
	resources \
	python/pysg2.cxx \
	third-parties/python-bind-helper/python-bind-helper.hxx \
	pyproject.toml \
	setup.py \
	gen-geocentric-data-code.py \
	build-wheels.sh \
	build-wheels.ps1 \
	README.linux \
	README.win

